Тестовое подключение к БД

--- a/lgk-base-db/pom.xml
+++ b/lgk-base-db/pom.xml
@@ -16,7 +16,7 @@
         Включает драйвер БД и вообще все необходимое для подключения.
         При сборке выполняет автотест подключения.
         Зависимость от этого артефактв должна быть в scope "provided", что бы не попасть в war.
-        В jetty его надо заливать просто jar-ом в lib (надо брать jar-with-dependencies).
+        В jetty его надо заливать просто jar-ом в lib/ext (надо брать jar-with-dependencies).
         Залитый jar надо переименовать в соответствии с окружением.
     </description>
     <dependencies>
