--- a/lgk-base-app/pom.xml
+++ b/lgk-base-app/pom.xml
@@ -9,7 +9,10 @@
 	<packaging>war</packaging>
 	<version>1.0.3</version>
 
-
+	<description>
+		"База" Гамма-ножа.
+		Собранное приложение war положить в jetty/webapps
+	</description>
 	<properties>
 		<vaadin.version>7.6.4</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
